[package]
name = "proxied-pop3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.63"
regex = "1.10.3"
lazy_static = "1.4.0"
fast-socks5 = "0.9.5"
log = "0.4.20"
structopt = "0.3"
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
dotenv = "0.15.0"